<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6A0DAD"
    tools:context=".Pedido">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:text="@string/pedidos"
        android:textColor="#FAFAFA"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="197dp"
        android:layout_height="135dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo"
        app:srcCompat="@drawable/witch_illustration_1_svgrepo_com" />

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <EditText
        android:id="@+id/editDomicilio"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/domicilio"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNombre" />

    <Spinner
        android:id="@+id/spnProducto"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/marca_redonda"
        style="@style/SpinnerStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDomicilio" />



    <Spinner
        android:id="@+id/spnTalla"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/marca_redonda"
        style="@style/SpinnerStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnProducto" />

    <EditText
        android:id="@+id/editTelefono"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/contacto"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnTalla" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:clickable="true"
        android:onClick="onClick"
        app:backgroundTint="#006400"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTelefono"
        app:srcCompat="@drawable/baseline_app_registration_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:clickable="true"
        android:onClick="onClick"
        app:backgroundTint="#8B0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTelefono"
        app:srcCompat="@drawable/baseline_cancel_24" />

</androidx.constraintlayout.widget.ConstraintLayout>