<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6A0DAD"
    android:onClick="onClick"
    tools:context=".Acceso">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="100dp"
        android:clickable="true"
        android:onClick="onClick"
        android:src="@drawable/baseline_close_24"
        app:backgroundTint="#8B0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editContrasena" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="50dp"
        android:clickable="true"
        android:onClick="onClick"
        android:src="@drawable/baseline_arrow_forward_24"
        app:backgroundTint="#006400"
        app:layout_constraintEnd_toStartOf="@+id/btnSalir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editContrasena" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:text="@string/titulo"
        android:textColor="#FAFAFA"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editCorreo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="text"
        android:maxLength="15"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <EditText
        android:id="@+id/editContrasena"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="80dp"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:maxLength="8"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCorreo" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="197dp"
        android:layout_height="135dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo"
        app:srcCompat="@drawable/witch_illustration_1_svgrepo_com" />
</androidx.constraintlayout.widget.ConstraintLayout>